--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/react": "^17.0.0",
     "cheerio": "^1.0.0-rc.3",
-    "got": "^11.8.0"
+    "got": "^11.8.0",
+    "typescript": "^4.1.2"
   }
 }
