--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@carbon/icons-react": "10.3.0",
+    "carbon-components": "10.3.0",
+    "carbon-components-react": "7.3.0",
+    "carbon-icons": "7.0.7",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
