--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "carbon-components": "10.3.0",
     "carbon-components-react": "7.3.0",
     "carbon-icons": "7.0.7",
+    "moment": "^2.29.1",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
