--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "moment": "^2.29.1",
     "next": "10.0.3",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-spinners": "^0.9.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
