--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-spinners": "^0.9.0"
+    "react-spinners": "^0.9.0",
+    "swr": "^0.3.9"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
