--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "devDiffPort": "next dev -p 3001",
     "build": "next build",
     "start": "next start"
   },
