--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@vercel/node": "^1.8.5",
-    "cheerio": "^1.0.0-rc.3",
     "got": "^11.8.0",
+    "jsdom": "^16.4.0",
     "typescript": "^4.1.2"
   }
 }
