--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "devDiffPort": "next dev -p 3001",
+    "devServer": "next dev -p 80",
     "build": "next build",
     "start": "next start"
   },
@@ -16,6 +17,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-spinners": "^0.9.0",
+    "sass": "^1.30.0",
     "swr": "^0.3.9"
   },
   "devDependencies": {
