--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "compound-interest": "^0.3.1",
     "moment": "^2.29.1",
     "next": "10.0.3",
     "react": "17.0.1",
