--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@nivo/core": "^0.67.0",
+    "@nivo/line": "^0.67.0",
     "compound-interest": "^0.3.1",
     "moment": "^2.29.1",
     "next": "10.0.3",
+    "next-transpile-modules": "^6.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-spinners": "^0.9.0",
