--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@vercel/node": "^1.8.5",
+    "eslint": "^7.16.0",
     "got": "^11.8.0",
     "jsdom": "^16.4.0",
     "typescript": "^4.1.2"
