--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@material-ui/icons": "^4.11.2",
     "@nivo/core": "^0.67.0",
     "@nivo/line": "^0.67.0",
+    "carbon-components": "^10.27.0",
+    "carbon-components-react": "^7.27.0",
+    "carbon-icons": "^7.0.7",
     "compound-interest": "^0.3.1",
     "moment": "^2.29.1",
     "next": "10.0.3",
