--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "carbon-icons": "^7.0.7",
     "compound-interest": "^0.3.1",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "next": "10.0.3",
     "next-transpile-modules": "^6.0.0",
     "react": "17.0.1",
