--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.2.0",
     "@carbon/themes": "^10.26.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
