--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@material-ui/icons": "^4.11.2",
     "@nivo/core": "^0.67.0",
     "@nivo/line": "^0.67.0",
+    "bcryptjs": "^2.4.3",
     "carbon-components": "^10.27.0",
     "carbon-components-react": "^7.27.0",
     "carbon-icons": "^7.0.7",
     "compound-interest": "^0.3.1",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
-    "next": "10.0.3",
+    "next": "^10.0.6",
     "next-transpile-modules": "^6.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
